--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="mailto:xiaoadelin@gmail.com? subject=Hello!" class="btn">
       <img src="images/gmail-old-svgrepo-com.svg" alt="Gmail Icon" class="icon">
     </a>
-    <a href="resume/Ma Yidan (Adelin) Resume 2025:06.pdf" download class="btn">
+    <a href="resume/Ma Yidan (Adelin) Resume 2025_08.pdf" target="_blank" class="btn">
       <img src="images/resume-business-cv-work-job-curriculum-2-svgrepo-com.svg" alt="Resume Icon" class="icon">
     </a>
     <a href="https://www.linkedin.com/in/adelinmayidan" target="_blank" class="btn">
