--- a/academic.html
+++ b/academic.html
@@ -76,9 +76,10 @@
         <div class="experience-tab-organization">Summer Study Abroad in Sendai, Japan</div>
         <div class="experience-tab-date">Jul 2025</div>
       </div>
-      <!-- <ul class="tab-details">
-        <li>What I did in Sendai</li>
-      </ul> -->
+      <ul class="tab-details">
+        <li>Participated in the Tohoku University STEM Summer Program 2025 (TSSP), spending 4 weeks in Japan exploring various disciplines from Robotics for Space Exploration to Nonverbal Information to Enrich Future Telecommunications. </li>
+        <li>Awarded the Japan Student Services Organization Scholarship (JASSO) from demonstrating excellent academic and personal records at home university.</li>
+      </ul>
     </div>
 
     <div class="experience-tab styled-tab">
